display abnormal gacha rates + layout bug

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -505,6 +505,10 @@ td {
   color:white;
   font-size:0!important;
 
+  small {
+    vertical-align:bottom;
+  }
+
   .item.name {
       word-wrap:break-word;
   }
@@ -575,6 +579,10 @@ span.var {
   display:inline-block;
   border: 1px solid;
   vertical-align:top;
+
+  small {
+    vertical-align:bottom;
+  }
 
   &.col2 {
     /* don't know why but it works
